<resources>
    <string name="app_name">Connect</string>
    <!-- KEYS -->
    <string name="userParcelable">user</string>
    <string name="albums">albums</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- AUTH -->
    <string name="auth_username_or_email">Username or Email</string>
    <string name="auth_username">Username</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_signup">Sign up</string>
    <string name="auth_login">Log in</string>
    <string name="auth_have_ac">Already have an account?</string>
    <string name="auth_no_ac">Don\'t have an account?</string>
    <string name="auth_log_in">\u0020Log in.</string>
    <string name="auth_sign_up">\u0020Sign up.</string>
    <string name="enter_valid_email_tv">Enter a valid email address, this will help at the time of recovering your password.</string>
    <string name="next">Next</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="enter_confirmation_code">ENTER CONFIRMATION CODE</string>
    <string name="enter_confirmation_format">Enter the confirmation code we sent to %s</string>
    <string name="resend_code">Resend code.</string>
    <string name="name_and_password">NAME AND PASSWORD</string>
    <string name="full_name">Full name</string>
    <string name="pick_username">Pick username for your account. You can always change it later.</string>
    <string name="username">USERNAME</string>
    <!-- DIALOG -->
    <string name="dialog_ok">OK</string>
    <string name="errorDialogTitle">Error</string>
    <string name="cancel">Cancel</string>
    <string name="log_out_of_connect">Log out of Connect?</string>
    <string name="logging_out">Logging out…</string>
    <!-- HOME -->
    <string name="no_posts">No Posts</string>
    <string name="no_posts_sub">When you share photos or follow people then, posts will appear here.</string>
    <string name="share_first_post">Share your first photo</string>
    <string name="search">Search</string>
    <!-- PROFILE -->
    <string name="follow_back">Follow Back</string>
    <string name="unfollow">UnFollow</string>
    <string name="follow">Follow</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="retry">Retry</string>
    <string name="refresh_image_icon">Refresh image icon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_has_no_posts">This profile hasn\'t posts yet.</string>
    <!-- SETTINGS -->
    <string name="log_out">Log out</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="account_icon">Account icon</string>
    <string name="change_password_icon">Change password icon</string>
    <string name="theme_icon">Theme icon</string>
    <string name="logout_icon">Logout icon</string>
    <!-- THEME -->
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="set_theme">Set theme</string>
    <!-- CHANGE PASSWORD -->
    <string name="cp_title_tv">Your password must be at least 6 characters and should include a combination of numbers, letters and special characters (!$@%).</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <!-- SEARCH -->
    <string name="no_users">No Users</string>
    <string name="no_users_with">There are no users with \"%s\"</string>
    <string name="search_user">Search here…</string>
    <!-- SEARCH USER ITEM LAYOUT -->
    <string name="clear_search_user">Clear search user</string>
    <!-- PICK FILE -->
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <!-- PHOTO -->
    <string name="photo_capture">Photo capture</string>
    <string name="camera_switch">Camera switch</string>
    <!-- GALLERY -->
    <string name="drop_down_icon">Drop down icon</string>
    <string name="image">Image</string>
    <!-- LIKE -->
    <string name="no_likes">No Likes</string>
    <string name="there_are_no_likes_yet">There are no likes yet</string>
    <!-- COMMENT -->
    <string name="no_comments">No Comments</string>
    <string name="there_are_no_comments_yet">There are no comments yet</string>
    <string name="type_comment_here">Type comment here…</string>
    <string name="post">post</string>
    <!-- EDIT PROFILE -->
    <string name="caps_fullname">Fullname</string>
    <string name="caps_username">Username</string>
    <string name="caps_relationship_status">Relationship Status</string>
    <string name="caps_bio">Bio</string>
    <string name="change_profile_photo">Change profile photo</string>
    <!-- CREATE POST -->
    <string name="title">Title</string>
    <string name="about_the_post">About the post…</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="create_post">Create Post</string>
</resources>