<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.connect.android.ui.profile.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/settings_container_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/whiteBgColor"
        android:orientation="vertical"
        tools:context=".ui.profile.settings.SettingsFragment">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/settings_container_ll_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bg_effect"
            android:clickable="true"
            android:onClick="@{() -> viewModel.navigateToChangePassword()}"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="14dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/change_password_icon"
                android:src="@drawable/ic_change_password" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/change_password"
                android:textColor="?attr/blackTextColor"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_container_ll_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bg_effect"
            android:onClick="@{() -> viewModel.navigateToTheme()}"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="14dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/theme_icon"
                android:src="@drawable/ic_theme" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/theme"
                android:textColor="?attr/blackTextColor"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_container_ll_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bg_effect"
            android:clickable="true"
            android:onClick="@{() -> viewModel.navigateToLogout()}"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="14dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logout_icon"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/log_out"
                android:textColor="?attr/blueColor"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</layout>