<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/whiteBgColor"
        android:orientation="vertical"
        tools:context=".ui.profile.settings.theme.ThemeFragment">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/theme_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/theme_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:padding="14dp">

            <RadioButton
                android:id="@+id/theme_light_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/light"
                android:textColor="?attr/blackTextColor"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/theme_dark_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dark"
                android:textColor="?attr/blackTextColor"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/theme_default_rb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/system_default"
                android:textColor="?attr/blackTextColor"
                android:textSize="16sp" />
        </RadioGroup>

    </LinearLayout>
</layout>