<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.connect.android.ui.profile.settings.changepassword.ChangePasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/whiteBgColor"
        android:orientation="vertical"
        tools:context=".ui.profile.settings.changepassword.ChangePasswordFragment">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/cp_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cp_title_tv"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/cp_title_tv"
            android:textAlignment="center"
            android:textColor="?attr/veryDarkGrayColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/cp_old_password_et"
            style="@style/edit_text"
            android:layout_width="292dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:autofillHints="Old Password"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:text="@={viewModel.oldPassword}" />

        <EditText
            android:id="@+id/cp_new_password_et"
            style="@style/edit_text"
            android:layout_width="292dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:autofillHints="New Password"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:text="@={viewModel.newPassword}" />

        <EditText
            android:id="@+id/cp_confirm_password_et"
            style="@style/edit_text"
            android:layout_width="292dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:autofillHints="Confirm New Password"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:text="@={viewModel.confirmNewPassword}" />

        <RelativeLayout
            android:id="@+id/cp_container_rl"
            android:layout_width="292dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/progress_indicator_background">

            <Button
                android:id="@+id/cp_btn"
                style="@style/blueButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:enabled="@{viewModel.isCpBtnEnabled}"
                android:onClick="@{() -> viewModel.changePassword()}"
                android:minWidth="292dp"
                android:text="@string/change_password" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/cp_pd"
                style="Widget.MaterialComponents.CircularProgressIndicator.ExtraSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/white"
                app:indicatorSize="30dp"
                app:trackThickness="2dp" />

        </RelativeLayout>

    </LinearLayout>
</layout>